# training_practical_testing

./: README.md  pyproject.toml  requirements.freeze.txt
src/: distribution.py
tests/: test_distribution.py  test_dummy.py
tests/assets/: result_compute_distribution.csv  sales.csv
