[tool.poetry]
name = "training_practical_testing"
version = "0.1.0"
description = "Exercices of automated testing"
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
pytest = "^7.2.0"
pytest-coverage = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
